...
    "Finish" : {

    },
    "Finish a session and save it as a routine to start it here in one tap." : {

    },
    "Finish Session" : {

    },
    "Gear sharpens your Trial strikes." : {

    },
    "Group by" : {
...
    "Save Workouts to Health" : {

    },
    "Search exercises" : {

    },
    "Search workouts or exercises" : {

    },
    "Selected" : {

    },
    "Session" : {
...
    "Swap Exercise" : {

    },
    "Tap a workout for its chart. Long-press to edit or delete." : {

    },
    "Tap an item to equip it. Long-press to discard." : {

    },
    "Tap anywhere to continue" : {

    },
    "Tap the chest to open it" : {
...
            "state" : "new",
            "value" : "Version %1$@ (%2$@)"
          }
        }
      }
    },
    "View Progress" : {

    },
    "W" : {

    },
    "Wearing: %@" : {
...
